--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
 
     <!-- 우리은행 -->
-    <div class="bank-item" onclick="openApp('woribank://')">
+    <div class="NewSmartPib://" onclick="openApp('woribank://')">
       <img src="https://play-lh.googleusercontent.com/X0F73sNd54RPhUJCMlRAINxhGKxw18jkBgw4E5F6dIs_7pL5Geg0xWt5taQwisw47ok=w480-h960-rw" alt="우리은행">
       <div class="bank-name">우리은행</div>
     </div>
